--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,9 +10,9 @@
     },
     "content_scripts": [
         {
-        "matches": ["https://www.instacart.com/store/publix/products/510450"],
-        "js": ["script.js"],
-        "run_at": "document_end"
+        "matches": ["https://www.instacart.com/store/*/products/*"],
+        "js": ["lib/jquery.min.js", "script.js"],
+        "run_at": "document_idle"
         }
     ],
     "permissions": [
